Updated to use centos instead of alpine

--- a/codestream-ci/Dockerfile
+++ b/codestream-ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.12
+FROM centos:centos7
 LABEL maintainer="sam.perrin@xtravirt.com"
 
-RUN apk update && apk --no-cache add curl wget unzip git libc6-compat ca-certificates bash findutils
+RUN yum install -y curl wget ca-certificates unzip git 
