--- a/alpine-codestream-ci/Dockerfile
+++ b/alpine-codestream-ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.12
+FROM alpine:3.13.2
 LABEL maintainer="sam.perrin@xtravirt.com"
 
-RUN apk add --no-cache curl wget unzip ca-certificates bash
+RUN apk add --no-cache curl wget unzip ca-certificates bash jq git
