--- a/alpine-codestream-clusterctl/Dockerfile
+++ b/alpine-codestream-clusterctl/Dockerfile
@@ -1,28 +1,17 @@
 FROM samperrin/alpine-codestream-ci:latest
 LABEL maintainer="sam.perrin@xtravirt.com"
 
-ARG GOVC_VERSION=0.22.1
+ARG GOVC_VERSION=0.24.0
 ARG OVFTOOL_FILENAME=VMware-ovftool-4.4.0-16360108-lin.x86_64.bundle
 
 # ADD $OVFTOOL_FILENAME /tmp/
 
 # Install additional tools
-RUN apk add --no-cache jq python3 && \
-    apk add --no-cache --virtual .build-apps wget unzip git coreutils libgcc
-
-RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
-RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.32-r0/glibc-2.32-r0.apk && \
-    wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.32-r0/glibc-bin-2.32-r0.apk && \
-    wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.32-r0/glibc-i18n-2.32-r0.apk
-RUN apk add glibc-2.32-r0.apk glibc-bin-2.32-r0.apk glibc-i18n-2.32-r0.apk && \
-    /usr/glibc-compat/bin/localedef -i en_GB -f UTF-8 en_GB.UTF-8 && \
-    rm -f glibc-2.32-r0.apk glibc-bin-2.32-r0.apk glibc-i18n-2.32-r0.apk
+RUN apk add --no-cache python3 && \
+    apk add --no-cache --virtual .build-apps coreutils libgcc
 
 # Install ovftool
-# RUN chmod +x /tmp/$OVFTOOL_FILENAME && \ 
-#     /bin/sh /tmp/$OVFTOOL_FILENAME --console --eulas-agreed --required && \
-#     rm -f /tmp/$OVFTOOL_FILENAME
-RUN wget --quiet https://raw.githubusercontent.com/sam-perrin/codestream-cluster-api/master/files/$OVFTOOL_FILENAME && \
+RUN wget --quiet https://raw.githubusercontent.com/sam-perrin/codestream-docker/master/files/$OVFTOOL_FILENAME && \
     chmod +x /$OVFTOOL_FILENAME && \
     /bin/sh /$OVFTOOL_FILENAME --console --eulas-agreed --required && \
     rm -f /$OVFTOOL_FILENAME
