--- a/alpine-codestream-ci/Dockerfile
+++ b/alpine-codestream-ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.13.2
+FROM alpine:3.13.6
 LABEL maintainer="sam.perrin@xtravirt.com"
 
 #https://github.com/sgerrand/alpine-pkg-glibc
@@ -6,8 +6,10 @@ ARG APK_GLIBC_VERSION=2.34-r0
 ARG APK_GLIBC_FILE="glibc-${APK_GLIBC_VERSION}.apk"
 ARG APK_GLIBC_BIN_FILE="glibc-bin-${APK_GLIBC_VERSION}.apk"
 ARG APK_GLIBC_BASE_URL="https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${APK_GLIBC_VERSION}"
+ARG YQ_FILENAME=yq_linux_amd64
 
-RUN apk add --no-cache curl wget unzip ca-certificates bash jq yq git bind-tools openssl
+RUN apk update
+RUN apk add --no-cache curl wget unzip ca-certificates bash jq git bind-tools openssl
 
 # Get and install glibc for alpine
 RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
@@ -16,3 +18,7 @@ RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/s
     apk --no-cache add "${APK_GLIBC_FILE}" && \
     apk --no-cache add "${APK_GLIBC_BIN_FILE}" && \
     rm glibc-*
+
+ADD $YQ_FILENAME .
+RUN chmod +x /$YQ_FILENAME
+RUN mv /$YQ_FILENAME /usr/bin/yq
